--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
 <h1>SHIT FOR BRAINS!</h1>
+<!-- Bootstrap CSS CDN -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <button type="button" class="btn btn-primary">Hello</button>
